kubeflow/contrib/kserve/web-app-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: /kserve-models-web-app
  labels:
    kustomize.component: kserve-models-web-app
    app.kubernetes.io/component: kserve-models-web-app
  name: kserve-models-web-app
spec:
  action: ALLOW
  selector:
    matchLabels:
      kustomize.component: kserve-models-web-app
      app.kubernetes.io/component: kserve-models-web-app
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
